--- a/.gitignore
+++ b/.gitignore
@@ -5,14 +5,14 @@
 #   git config --global core.excludesfile ~/.gitignore_global
 
 # Ignore bundler config
-/.bundle
+/source/.bundle
 
 # Ignore the default SQLite database.
-/db/*.sqlite3
+/source/db/*.sqlite3
 
 # Ignore all logfiles and tempfiles.
-/log/*.log
-/tmp
-.rvmrc
-/config/database.yml
+/source/log/*.log
+/source/tmp
+/source/.rvmrc
+/source/config/database.yml
 
